--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </li>
             <li class="cartao fundo">
-                <h2 class="cavaleiro">Saga de Gêmios</h2>
+                <h2 class="cavaleiro">Saga de Gêmeos</h2>
                 <img class="imagem-cavaleiro" src="./src/img/saga.png" alt="Saga de Gêmios">
                 <div class="descricao">
 
